# ik-nlp-tutorials

./: .gitignore  FAQ.md  Habrok.md  Peregrine.md  README.md  pyproject.toml  requirements.txt
notebooks/: W1T_Intro_Setup_Tools.ipynb  W2E_Pipelines_Sentence_Transformers.ipynb  W2T_Intro_Transformers_Datasets.ipynb  W3E_BPE_Transduction.ipynb  W3T_Analysis_Spacy_Stanza.ipynb  W3T_Intro_Spacy.ipynb  W3T_Transformers_Generation.ipynb  W4E_NonTextual_Information.ipynb  W4T_Linguistic_Analysis.ipynb  W4T_Tagging_Parsing.ipynb  W4T_Text_Tagging.ipynb  W5E_Inseq_Analysis.ipynb  W5T_Dependency_Parsing.ipynb  W5T_Transformers_Finetune.ipynb  W5T_Transformers_Generation.ipynb  W6T_Advanced_Prompting_Generation.ipynb  W6T_Transformers_Generation.ipynb
