[tool.poetry]
name = "ik-nlp-tutorials"
version = "2024.1"
description = "Tutorials and Exercises for the NLP course at the University of Groningen"
authors = ["Gabriele Sarti <g.sarti@rug.nl>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jupyterlab = "^3.2.9"
transformers = "^4.26"
accelerate = "^0.16.0"
peft = "^0.1.0"
torch = "^2.1.2"
datasets = "^2.9.0"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.2.1"
spacy = "^3.5.0"
stanza = "^1.4.2"
sentencepiece = "^0.1.97"
thermostat-datasets = "^1.0.2.1"
bitsandbytes = "^0.37.0"
inseq = { git = "https://github.com/inseq-team/inseq.git" }
ipykernel = "^6.21.1"
sacremoses = "^0.0.53"
ipywidgets = "^8.0.4"
evaluate = "^0.4.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
